FEATURE( tasks ) Get categories documentation finished.
