# tasks/src/main/java/juliokozarewicz/categories/adapter/rest/dto/CategoriesGetDTO.java
@@ -8,7 +8,7 @@ public record CategoriesGetDTO (
 
     @Min(value = 1, message = GlobalExceptionEnum.TOO_FEW_CHARACTERS_DTO)
     @Max(value = 100, message = GlobalExceptionEnum.TOO_MANY_CHARACTERS_DTO)
-    Integer sizePagination,
+    Integer pageSize,
 
     @Max(value = 100, message = GlobalExceptionEnum.TOO_MANY_CHARACTERS_DTO)
     Integer pageNumber,
