# tasks/src/main/java/juliokozarewicz/tasks/adapter/rest/dto/TasksGetDTO.java
@@ -12,7 +12,7 @@ public record TasksGetDTO(
 
     @Min(value = 1, message = GlobalExceptionEnum.TOO_FEW_CHARACTERS_DTO)
     @Max(value = 100, message = GlobalExceptionEnum.TOO_MANY_CHARACTERS_DTO)
-    Integer sizePagination,
+    Integer pageSize,
 
     @Max(value = 100, message = GlobalExceptionEnum.TOO_MANY_CHARACTERS_DTO)
     Integer pageNumber,
